// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commercial rules > [id]: another TMC cannot see it; one rule with the targets it reaches 1`] = `
{
  "assignments": [
    {
      "id": "a2fa887f-2dcc-4db1-99fe-2a0a4028dac4",
      "kind": "bucket",
      "targetId": "6f7ba956-97a4-4f1a-8f49-6d20fca39332",
      "targetName": "Corps with vibes",
      "via": "Bucket · Corps with vibes",
    },
  ],
  "ok": true,
  "rule": {
    "active": true,
    "airline_code": "AI",
    "cabin": null,
    "calc_basis": null,
    "calc_on": "bf",
    "calc_type": "percent",
    "category_id": "51e6a8be-bff4-4822-86f4-50f8cf571c13",
    "created_at": "2026-09-15T06:46:57.785Z",
    "created_by": "f425dc71-960b-4164-b87a-b4616d86406f",
    "exclude_tax_codes": null,
    "fare_type": "corporate",
    "id": "e538b45f-c7e2-48d5-8cde-26ffaf04bfe9",
    "include_ssr": null,
    "kind": "markup",
    "notes": null,
    "rate": 20,
    "rbd_spec": "Y",
    "status": "active",
    "updated_at": "2026-09-17T11:40:12.098Z",
    "valid_from": "2026-09-15",
    "valid_to": "2027-07-22",
  },
}
`;

exports[`commercial rules > POST: a markup, and a fee with its fee-only defaults 1`] = `
{
  "active": true,
  "airline_code": "UK",
  "cabin": null,
  "calc_basis": null,
  "calc_on": "bf",
  "calc_type": "percent",
  "category_id": "51e6a8be-bff4-4822-86f4-50f8cf571c13",
  "created_by": "f425dc71-960b-4164-b87a-b4616d86406f",
  "exclude_tax_codes": null,
  "fare_type": "all",
  "include_ssr": null,
  "kind": "markup",
  "notes": "test",
  "rate": 3,
  "rbd_spec": null,
  "status": "active",
  "targetCount": 0,
  "valid_from": null,
  "valid_to": null,
}
`;

exports[`commercial rules > effective: what each client ends up with 1`] = `
{
  "items": [
    {
      "ambiguous": false,
      "clientId": "2dbeb834-8151-46b7-b73c-775c9ca359d9",
      "clientName": "Arjun K",
      "discount": null,
      "discountVia": null,
      "fee": "₹1200 per sector",
      "feeVia": "Bucket · Corps with vibes",
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "52f419af-d730-4928-8714-a74e8e362f52",
      "clientName": "Arjun K",
      "discount": null,
      "discountVia": null,
      "fee": null,
      "feeVia": null,
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "b5005d4e-b813-4f10-ae59-1b0f5257357e",
      "clientName": "BCG",
      "discount": "10% of TF",
      "discountVia": "Direct assignment",
      "fee": "₹1200 per sector",
      "feeVia": "Bucket · Corps with vibes",
      "lossMaking": true,
      "markup": null,
      "markupVia": null,
      "netPercent": -10,
      "switchedOff": [],
      "variesByCategory": [
        "discount",
      ],
    },
    {
      "ambiguous": false,
      "clientId": "51e2569a-91b8-4844-afd8-1a725450a8fc",
      "clientName": "ekjd",
      "discount": null,
      "discountVia": null,
      "fee": null,
      "feeVia": null,
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "5f73d5e1-afcd-494c-b172-8a2de53cc9c9",
      "clientName": "Flip",
      "discount": null,
      "discountVia": null,
      "fee": null,
      "feeVia": null,
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "911a4f7f-b278-4918-9136-972a0c4da47c",
      "clientName": "Lenskart",
      "discount": null,
      "discountVia": null,
      "fee": "₹1200 per sector",
      "feeVia": "Bucket · Corps with vibes",
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "a908acf4-31d1-45e9-abcd-f0eba6c26c83",
      "clientName": "Micron",
      "discount": null,
      "discountVia": null,
      "fee": null,
      "feeVia": null,
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "d9e1cc42-e3fe-41c3-b2c4-6c1ba14ba062",
      "clientName": "wd",
      "discount": null,
      "discountVia": null,
      "fee": null,
      "feeVia": null,
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
    {
      "ambiguous": false,
      "clientId": "e28889b2-7718-4ed2-bc50-c4a5bd7024e9",
      "clientName": "X",
      "discount": null,
      "discountVia": null,
      "fee": null,
      "feeVia": null,
      "lossMaking": false,
      "markup": null,
      "markupVia": null,
      "netPercent": null,
      "switchedOff": [],
      "variesByCategory": [],
    },
  ],
  "kindLabels": {
    "discount": "Discount",
    "markup": "Markup",
    "processing_fee": "Processing fee",
  },
  "lossMakingCount": 1,
  "ok": true,
  "page": 1,
  "pageSize": 10,
  "total": 9,
  "totalPages": 1,
}
`;

exports[`commercial rules > list: every rule with its category, status and reach 1`] = `
{
  "items": [
    {
      "active": true,
      "airline_code": null,
      "cabin": null,
      "calc_basis": null,
      "calc_on": "tf",
      "calc_type": "percent",
      "categoryCode": "DOMAIRBSP",
      "categoryLabel": "Domestic - BSP settled",
      "category_id": "51e6a8be-bff4-4822-86f4-50f8cf571c13",
      "created_at": "2026-09-17T11:39:06.788Z",
      "created_by": "f425dc71-960b-4164-b87a-b4616d86406f",
      "exclude_tax_codes": null,
      "fare_type": "all",
      "id": "1a4a51e9-289d-4d18-bff3-38c5251e63f1",
      "include_ssr": null,
      "kind": "discount",
      "notes": null,
      "rate": 10,
      "rbd_spec": null,
      "status": "active",
      "targetCount": 1,
      "updated_at": "2026-09-17T11:39:06.788Z",
      "valid_from": "2026-09-17",
      "valid_to": "2027-08-06",
    },
    {
      "active": true,
      "airline_code": null,
      "cabin": null,
      "calc_basis": null,
      "calc_on": "tf",
      "calc_type": "percent",
      "categoryCode": "DOMAIRLCC",
      "categoryLabel": "Domestic - LCC direct connect",
      "category_id": "b296e0b7-dc34-4de5-95b2-6de153e71359",
      "created_at": "2026-09-17T11:35:11.953Z",
      "created_by": "f425dc71-960b-4164-b87a-b4616d86406f",
      "exclude_tax_codes": null,
      "fare_type": "all",
      "id": "103617f9-382c-4919-80a7-f7cc5b9113b4",
      "include_ssr": null,
      "kind": "discount",
      "notes": null,
      "rate": 10,
      "rbd_spec": null,
      "status": "active",
      "targetCount": 1,
      "updated_at": "2026-09-17T11:35:11.953Z",
      "valid_from": "2026-09-17",
      "valid_to": "2030-06-28",
    },
    {
      "active": true,
      "airline_code": "6E",
      "cabin": null,
      "calc_basis": "per_sector",
      "calc_on": "tf",
      "calc_type": "fixed",
      "categoryCode": "DOMAIRBSP",
      "categoryLabel": "Domestic - BSP settled",
      "category_id": "51e6a8be-bff4-4822-86f4-50f8cf571c13",
      "created_at": "2026-09-15T06:52:23.820Z",
      "created_by": "f425dc71-960b-4164-b87a-b4616d86406f",
      "exclude_tax_codes": [],
      "fare_type": "all",
      "id": "2d4e5674-4eb4-46b7-bd69-6b237571e8dd",
      "include_ssr": true,
      "kind": "processing_fee",
      "notes": null,
      "rate": 1200,
      "rbd_spec": null,
      "status": "active",
      "targetCount": 1,
      "updated_at": "2026-09-17T11:37:36.405Z",
      "valid_from": "2026-09-15",
      "valid_to": "2028-11-22",
    },
    {
      "active": true,
      "airline_code": "AI",
      "cabin": null,
      "calc_basis": null,
      "calc_on": "bf",
      "calc_type": "percent",
      "categoryCode": "DOMAIRBSP",
      "categoryLabel": "Domestic - BSP settled",
      "category_id": "51e6a8be-bff4-4822-86f4-50f8cf571c13",
      "created_at": "2026-09-15T06:46:57.785Z",
      "created_by": "f425dc71-960b-4164-b87a-b4616d86406f",
      "exclude_tax_codes": null,
      "fare_type": "corporate",
      "id": "e538b45f-c7e2-48d5-8cde-26ffaf04bfe9",
      "include_ssr": null,
      "kind": "markup",
      "notes": null,
      "rate": 20,
      "rbd_spec": "Y",
      "status": "active",
      "targetCount": 1,
      "updated_at": "2026-09-17T11:40:12.098Z",
      "valid_from": "2026-09-15",
      "valid_to": "2027-07-22",
    },
  ],
  "ok": true,
  "page": 1,
  "pageSize": 10,
  "total": 4,
  "totalPages": 1,
}
`;
